--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
   "name": "paymagic-contracts",
+  "scripts": {
+    "clean": "hardhat clean",
+    "precompile": "npm run clean",
+    "compile": "hardhat compile",
+    "test": "hardhat test",
+    "prettier": "prettier --write 'contracts/**/*.sol'",
+    "deploy-kovan": "hardhat run scripts/deploy.js --network kovan"
+  },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.6",
-    "hardhat": "^2.6.4"
+    "hardhat": "^2.6.4",
+    "prettier": "^2.4.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.18"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.2",
+    "@openzeppelin/contracts-upgradeable": "^4.3.2",
     "dotenv": "^10.0.0"
   }
 }
